# tb3x_autorace

./: README.md
tb3x_autorace/: CHANGELOG.rst  CMakeLists.txt  package.xml
tb3x_autorace_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
tb3x_autorace_camera/calibration/camera_calibration/calibrationdata/: ost.txt  ost.yaml
tb3x_autorace_camera/calibration/extrinsic_calibration/: projection.yaml
tb3x_autorace_camera/calibration/intrinsic_calibration/: camerav2_640x480_30fps.yaml
tb3x_autorace_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
tb3x_autorace_camera/launch/: tb3x_autorace_camera_uvc.launch  tb3x_autorace_extrinsic_camera_calibration.launch  tb3x_autorace_intrinsic_camera_calibration.launch
tb3x_autorace_camera/nodes/: image_compensation  image_projection
tb3x_autorace_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
tb3x_autorace_control/launch/: README  tb3x_autorace_control_lane.launch  tb3x_autorace_control_parking.launch
tb3x_autorace_control/nodes/: tb3x_control_lane
tb3x_configs/: tb3x_camera_image_projection.yaml  tb3x_detect_lane.yaml
tb3x_shell_scripts/: README.md  _instrinsic_camera.sh.swp  detect_lane_tuning.sh  extrinsic_camera_action.sh  extrinsic_camera_calib.sh  instrinsic_camera_action.sh  instrinsic_camera_calib.sh  raspi_camera.sh  stand_alone_lane_tracing.sh  tb3_gazebo_dqn.sh  tb3x_autorace_detect_lane.sh  tb3x_blockly.sh  tb3x_kill_all.sh  tb3x_lane_tuning.sh  tb3x_lane_tuning_action.sh  tb3x_lane_tuning_w_bringup.sh  tb3x_robot_dqn.sh  tb3x_teleop.sh
