<?xml version="1.0"?>
<package format="2">
  <name>tb3x_autorace_camera</name>
  <version>1.2.1</version>
  <description>
    Modified : TurtleBot3 AutoRace ROS package that controls Raspberry Pi Camera, and process the image
  </description>
  <license>Apache 2.0</license>
  <author email="akkharaphong.e@bu.ac.th">Patrick</author>
  <author>Akkharaphong EKSIRI</author>
  <maintainer email="akkharaphong.e@bu.ac.th">Patrick</maintainer>
  <maintainer email="akkharaphong.e@bu.ac.th">Patrick</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace_camera</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/aeksiri/tb3x_autorace</url>
  <url type="bugtracker">https://github.com/aeksiri/tb3x_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>uvc_camera</depend>
  <depend>camera_calibration</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>
