<?xml version="1.0"?>
<package format="2">
  <name>tb3x_autorace_control</name>
  <version>1.2.1</version>
  <description> 
    Modified of the TurtleBot3 AutoRace ROS package that controls TurtleBot3 Auto
  </description>
  <license>Apache 2.0</license>
  <author email="akkharaphong.e@bu.ac.th">Patrick</author>
  <author>Akkharaphong EKSIRI</author>
  <maintainer email="akkharaphong.e@bu.ac.th">Patrick</maintainer>
  <maintainer email="akkharaphong.e@bu.ac.th">Patrick</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace_control</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/aeksiri/tb3x_autorace</url>
  <url type="bugtracker">https://github.com/aeksiri/tb3x_autorace/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>

